// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'alert' cva > snap 1`] = `
{
  "base": [
    "alert",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "type": {
      "error": [
        "alert-error",
      ],
      "neutral": [
        "alert-neutral",
      ],
      "primary": [
        "alert-primary",
      ],
      "success": [
        "alert-success",
      ],
      "warning": [
        "alert-warning",
      ],
    },
  },
}
`;

exports[`'avatar' cva > snap 1`] = `
{
  "base": [
    "avatar",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'badge' cva > snap 1`] = `
{
  "base": [
    "badge",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "ghost": {
      "true": [
        "badge-ghost",
      ],
    },
    "outline": {
      "true": [
        "badge-outline",
      ],
    },
    "size": {
      "lg": [
        "badge-lg",
      ],
      "md": [
        "badge-md",
      ],
      "sm": [
        "badge-sm",
      ],
      "xs": [
        "badge-xs",
      ],
    },
    "type": {
      "error": [
        "badge-error",
      ],
      "neutral": [
        "badge-neutral",
      ],
      "primary": [
        "badge-primary",
      ],
      "success": [
        "badge-success",
      ],
      "warning": [
        "badge-warning",
      ],
    },
  },
}
`;

exports[`'bottom-navigation' cva > snap 1`] = `
{
  "base": [
    "btm-nav",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "disabled": {
      "true": [
        "disabled",
      ],
    },
    "size": {
      "lg": [
        "btm-nav-lg",
      ],
      "md": [
        "btm-nav-md",
      ],
      "sm": [
        "btm-nav-sm",
      ],
      "xs": [
        "btm-nav-xs",
      ],
    },
  },
}
`;

exports[`'breadcrumbs' cva > snap 1`] = `
{
  "base": [
    "breadcrumbs",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'button' cva > snap 1`] = `
{
  "base": [
    "btn",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "active": {
      "true": [
        "btn-active",
      ],
    },
    "disabled": {
      "true": [
        "btn-disabled",
      ],
    },
    "focusVisible": {
      "true": [
        "btn-focus-visible",
      ],
    },
    "ghost": {
      "true": [
        "btn-ghost",
      ],
    },
    "glass": {
      "true": [
        "glass",
      ],
    },
    "hover": {
      "true": [
        "btn-hover",
      ],
    },
    "link": {
      "true": [
        "btn-link",
      ],
    },
    "outline": {
      "true": [
        "btn-outline",
      ],
    },
    "shape": {
      "circle": [
        "btn-circle",
      ],
      "square": [
        "btn-square",
      ],
    },
    "size": {
      "block": [
        "btn-block",
      ],
      "lg": [
        "btn-lg",
      ],
      "md": [
        "btn-md",
      ],
      "sm": [
        "btn-sm",
      ],
      "wide": [
        "btn-wide",
      ],
      "xs": [
        "btn-xs",
      ],
    },
    "type": {
      "error": [
        "btn-error",
      ],
      "neutral": [
        "btn-neutral",
      ],
      "primary": [
        "btn-primary",
      ],
      "success": [
        "btn-success",
      ],
      "warning": [
        "btn-warning",
      ],
    },
  },
}
`;

exports[`'card' cva > snap 1`] = `
{
  "base": [
    "card",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'carousel' cva > snap 1`] = `
{
  "base": [
    "carousel",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'chat' cva > snap 1`] = `
{
  "base": [
    "chat",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'checkbox' cva > snap 1`] = `
{
  "base": [
    "checkbox",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "size": {
      "lg": [
        "checkbox-lg",
      ],
      "md": [
        "checkbox-md",
      ],
      "sm": [
        "checkbox-sm",
      ],
      "xs": [
        "checkbox-xs",
      ],
    },
    "type": {
      "error": [
        "checkbox-error",
      ],
      "neutral": [
        "checkbox-neutral",
      ],
      "primary": [
        "checkbox-primary",
      ],
      "success": [
        "checkbox-success",
      ],
      "warning": [
        "checkbox-warning",
      ],
    },
  },
}
`;

exports[`'collapse' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'countdown' cva > snap 1`] = `
{
  "base": [
    "countdown",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'diff' cva > snap 1`] = `
{
  "base": [
    "diff",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'divider' cva > snap 1`] = `
{
  "base": [
    "divider",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "direction": {
      "horizontal": [
        "divider-horizontal",
      ],
      "vertical": [
        "divider-vertical",
      ],
    },
    "type": {
      "error": [
        "divider-error",
      ],
      "neutral": [
        "divider-neutral",
      ],
      "primary": [
        "divider-primary",
      ],
      "success": [
        "divider-success",
      ],
      "warning": [
        "divider-warning",
      ],
    },
  },
}
`;

exports[`'drawer' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'dropdown' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'file-input' cva > snap 1`] = `
{
  "base": [
    "file-input",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "bordered": {
      "true": [
        "file-input-bordered",
      ],
    },
    "disabled": {
      "true": [
        "file-input",
      ],
    },
    "ghost": {
      "true": [
        "file-input-ghost",
      ],
    },
    "size": {
      "lg": [
        "file-input-lg",
      ],
      "md": [
        "file-input-md",
      ],
      "sm": [
        "file-input-sm",
      ],
      "xs": [
        "file-input-xs",
      ],
    },
    "type": {
      "error": [
        "file-input-error",
      ],
      "neutral": [
        "file-input-neutral",
      ],
      "primary": [
        "file-input-primary",
      ],
      "success": [
        "file-input-success",
      ],
      "warning": [
        "file-input-warning",
      ],
    },
  },
}
`;

exports[`'footer' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'form' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'hero' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'indicator' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'input' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'join' cva > snap 1`] = `
{
  "base": [
    "join",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "direction": {
      "horizontal": [
        "join-horizontal",
      ],
      "vertical": [
        "join-vertical",
      ],
    },
  },
}
`;

exports[`'kbd' cva > snap 1`] = `
{
  "base": [
    "kbd",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "size": {
      "lg": [
        "kbd-lg",
      ],
      "md": [
        "kbd-md",
      ],
      "sm": [
        "kbd-sm",
      ],
      "xs": [
        "kbd-xs",
      ],
    },
  },
}
`;

exports[`'link' cva > snap 1`] = `
{
  "base": [
    "link",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "hover": {
      "true": [
        "link-hover",
      ],
    },
    "type": {
      "error": [
        "link-error",
      ],
      "neutral": [
        "link-neutral",
      ],
      "primary": [
        "link-primary",
      ],
      "success": [
        "link-success",
      ],
      "warning": [
        "link-warning",
      ],
    },
  },
}
`;

exports[`'loading' cva > snap 1`] = `
{
  "base": [
    "loading",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "shape": {
      "audio": [
        "loading-audio",
      ],
      "ball-triangle": [
        "loading-ball-triangle",
      ],
      "bars": [
        "loading-bars",
      ],
      "circles": [
        "loading-circles",
      ],
      "grid": [
        "loading-grid",
      ],
      "hearts": [
        "loading-hearts",
      ],
      "oval": [
        "loading-oval",
      ],
      "puff": [
        "loading-puff",
      ],
      "rings": [
        "loading-rings",
      ],
      "spinning-circles": [
        "loading-spinning-circles",
      ],
      "tail-spin": [
        "loading-tail-spin",
      ],
      "three-dots": [
        "loading-three-dots",
      ],
    },
    "size": {
      "lg": [
        "loading-lg",
      ],
      "md": [
        "loading-md",
      ],
      "sm": [
        "loading-sm",
      ],
      "xs": [
        "loading-xs",
      ],
    },
  },
}
`;

exports[`'mask' cva > snap 1`] = `
{
  "base": [
    "mask",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "shape": {
      "circle": [
        "mask-circle",
      ],
      "decagon": [
        "mask-decagon",
      ],
      "diamond": [
        "mask-diamond",
      ],
      "heart": [
        "mask-heart",
      ],
      "hexagon": [
        "mask-hexagon",
      ],
      "hexagon-2": [
        "mask-hexagon-2",
      ],
      "parallelogram": [
        "mask-parallelogram",
      ],
      "parallelogram-2": [
        "mask-parallelogram-2",
      ],
      "parallelogram-3": [
        "mask-parallelogram-3",
      ],
      "parallelogram-4": [
        "mask-parallelogram-4",
      ],
      "pentagon": [
        "mask-pentagon",
      ],
      "square": [
        "mask-square",
      ],
      "squircle": [
        "mask-squircle",
      ],
      "star": [
        "mask-star",
      ],
      "star-2": [
        "mask-star-2",
      ],
      "triangle": [
        "mask-triangle",
      ],
      "triangle-2": [
        "mask-triangle-2",
      ],
      "triangle-3": [
        "mask-triangle-3",
      ],
      "triangle-4": [
        "mask-triangle-4",
      ],
    },
  },
}
`;

exports[`'menu' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'navbar' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'progress' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'radial-progress' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'radio' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'range' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'rating' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'select' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'skeleton' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'stack' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'stat' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'steps' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'swap' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'tab' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'table' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "size": {
      "lg": [
        "table-lg",
      ],
      "md": [
        "table-md",
      ],
      "sm": [
        "table-sm",
      ],
      "xs": [
        "table-xs",
      ],
    },
  },
}
`;

exports[`'textarea' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'timeline' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'toast' cva > snap 1`] = `
{
  "base": [
    "toast",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`'toggle' cva > snap 1`] = `
{
  "base": [
    "toggle",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "size": {
      "lg": [
        "toggle-lg",
      ],
      "md": [
        "toggle-md",
      ],
      "sm": [
        "toggle-sm",
      ],
      "xs": [
        "toggle-xs",
      ],
    },
    "type": {
      "error": [
        "toggle-error",
      ],
      "neutral": [
        "toggle-neutral",
      ],
      "primary": [
        "toggle-primary",
      ],
      "success": [
        "toggle-success",
      ],
      "warning": [
        "toggle-warning",
      ],
    },
  },
}
`;

exports[`'tooltip' cva > snap 1`] = `
{
  "base": [
    "tooltip",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "open": {
      "true": [
        "tooltip-open",
      ],
    },
    "placement": {
      "bottom": [
        "tooltip-bottom",
      ],
      "left": [
        "tooltip-left",
      ],
      "right": [
        "tooltip-right",
      ],
      "top": [
        "tooltip-top",
      ],
    },
  },
}
`;
